--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ docs_dir: docs/
 repo_name: GitHub
 repo_url: https://github.com/aquasecurity/trivy
 edit_uri: "blob/main/docs/"
+testA: asdfa
 
 nav:
   - Getting Started: 
